kubernetes/nginx_test/overlays/playground/ingress8043.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-test-8043
  labels:
    app: httpd-test-8043
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: raphael-ingress
    alb.ingress.kubernetes.io/group.name: raphael-ingress
    # playground-elb-a..d
    alb.ingress.kubernetes.io/subnets: >
      subnet-0ddcd232f4aadced5,subnet-0ce146c3e910e99be,subnet-0537501d0c681fcf9,subnet-01be9dc4807579950
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8043}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: '[elb]-raphael-test'
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: 'true'
    alb.ingress.kubernetes.io/tags: Name=raphael,Environment=playground
spec:
  rules:
    - host: raphael-8043.play.kurly.services
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd-test
                port:
                  number: 80
